# helioselene

./: CMakeLists.txt  PLAN.md  README.md  plan.md
.github/workflows/: ci.yml
common/: CMakeLists.txt  README.md
common/include/: ct_barrier.h  helioselene_ct_barrier.h  helioselene_platform.h  helioselene_secure_erase.h  load_3.h  load_4.h
common/include/x64/: mul128.h
ec-divisors/: CMakeLists.txt  README.md
ec-divisors/include/: divisor.h  divisor_eval.h  divisor_eval_internal.h  poly.h
ec-divisors/src/: divisor.cpp  divisor_eval.cpp  poly.cpp
ecfft/: CMakeLists.txt  README.md
ecfft/include/: ecfft_fp.h  ecfft_fq.h
ecfft/src/: ecfft.cpp
fp/: CMakeLists.txt  README.md
fp/include/: fp.h  fp_batch_invert.h  fp_cmov.h  fp_cneg.h  fp_frombytes.h  fp_invert.h  fp_mul.h  fp_ops.h  fp_pow22523.h  fp_sq.h  fp_sqrt.h  fp_tobytes.h  fp_utils.h
fq/: CMakeLists.txt  README.md
fq/include/: fq.h  fq_batch_invert.h  fq_cmov.h  fq_cneg.h  fq_frombytes.h  fq_invert.h  fq_mul.h  fq_ops.h  fq_sq.h  fq_sqrt.h  fq_tobytes.h  fq_utils.h
helios/: CMakeLists.txt  README.md
helios/include/: helios.h  helios_add.h  helios_batch_affine.h  helios_constants.h  helios_dbl.h  helios_frombytes.h  helios_g_table.inl  helios_madd.h  helios_map_to_curve.h  helios_msm_fixed.h  helios_msm_vartime.h  helios_ops.h  helios_pedersen.h  helios_precomp.h  helios_scalar.h  helios_scalarmult.h  helios_scalarmult_fixed.h  helios_scalarmult_vartime.h  helios_to_scalar.h  helios_tobytes.h  helios_validate.h
helios/include/portable/: helios_add.h  helios_dbl.h  helios_frombytes.h  helios_madd.h  helios_map_to_curve.h  helios_msm_vartime.h  helios_scalarmult.h  helios_scalarmult_vartime.h  helios_tobytes.h
helios/include/x64/: helios_add.h  helios_dbl.h  helios_madd.h  helios_map_to_curve.h  helios_msm_vartime.h
helios/include/x64/avx2/: helios_avx2.h
helios/include/x64/ifma/: helios_ifma.h
helios/src/portable/: helios_add.cpp  helios_frombytes.cpp  helios_madd.cpp  helios_map_to_curve.cpp  helios_msm_vartime.cpp  helios_scalarmult.cpp  helios_scalarmult_vartime.cpp
helios/src/x64/: helios_add.cpp  helios_dbl.cpp  helios_frombytes.cpp  helios_madd.cpp  helios_map_to_curve.cpp  helios_msm_vartime.cpp  helios_scalarmult.cpp  helios_scalarmult_vartime.cpp
helios/src/x64/avx2/: helios_msm_vartime.cpp  helios_scalarmult.cpp  helios_scalarmult_vartime.cpp
helios/src/x64/ifma/: helios_msm_vartime.cpp  helios_scalarmult.cpp  helios_scalarmult_vartime.cpp
include/: ct_barrier.h  divisor.h  fp.h  fp_cmov.h  fp_frombytes.h  fp_invert.h  fp_mul.h  fp_ops.h  fp_pow22523.h  fp_sq.h  fp_sqrt.h  fp_tobytes.h  fp_utils.h  fq.h  fq_cmov.h  fq_frombytes.h  fq_invert.h  fq_mul.h  fq_ops.h  fq_sq.h  fq_sqrt.h  fq_tobytes.h  fq_utils.h  helios.h  helios_add.h  helios_batch_affine.h  helios_constants.h  helios_dbl.h  helios_frombytes.h  helios_madd.h  helios_msm_vartime.h  helios_ops.h  helios_pedersen.h  helios_scalar.h  helios_scalarmult.h  helios_scalarmult_vartime.h  helios_tobytes.h  helios_validate.h  helioselene.h  helioselene_benchmark.h  (+29 more)
include/portable/: fp25_chain.h  fp25_inline.h  fp_frombytes.h  fp_mul.h  fp_sqn.h  fp_sqrt.h  fp_tobytes.h  fq25.h  fq25_chain.h  fq25_inline.h  fq_sqrt.h  helios_frombytes.h  helios_madd.h  helios_map_to_curve.h  helios_msm_vartime.h  helios_scalarmult.h  helios_tobytes.h  selene_msm_vartime.h  selene_scalarmult_vartime.h  selene_tobytes.h
include/x64/: fp51.h  fp51_chain.h  fp51_inline.h  fp_frombytes.h  fp_invert.h  fp_mul.h  fp_pow22523.h  fp_sq.h  fp_sq2.h  fp_sqn.h  fp_sqrt.h  fp_tobytes.h  fq51.h  fq51_chain.h  fq51_inline.h  fq_frombytes.h  fq_invert.h  fq_mul.h  fq_sq.h  fq_sq2.h  fq_sqn.h  fq_sqrt.h  fq_tobytes.h  helios_add.h  helios_dbl.h  helios_madd.h  helios_msm_vartime.h  mul128.h  selene_add.h  selene_dbl.h  selene_madd.h  selene_map_to_curve.h  selene_msm_vartime.h
selene/: CMakeLists.txt  README.md
selene/include/: selene.h  selene_add.h  selene_batch_affine.h  selene_constants.h  selene_dbl.h  selene_frombytes.h  selene_g_table.inl  selene_madd.h  selene_map_to_curve.h  selene_msm_fixed.h  selene_msm_vartime.h  selene_ops.h  selene_pedersen.h  selene_precomp.h  selene_scalar.h  selene_scalarmult.h  selene_scalarmult_fixed.h  selene_scalarmult_vartime.h  selene_to_scalar.h  selene_tobytes.h  selene_validate.h
selene/include/portable/: selene_add.h  selene_dbl.h  selene_frombytes.h  selene_madd.h  selene_map_to_curve.h  selene_msm_vartime.h  selene_scalarmult.h  selene_scalarmult_vartime.h  selene_tobytes.h
selene/include/x64/: selene_add.h  selene_dbl.h  selene_madd.h  selene_map_to_curve.h  selene_msm_vartime.h
selene/include/x64/avx2/: selene_avx2.h
selene/include/x64/ifma/: fq51x8_ifma.h  selene_ifma.h
selene/src/portable/: selene_add.cpp  selene_frombytes.cpp  selene_madd.cpp  selene_map_to_curve.cpp  selene_msm_vartime.cpp  selene_scalarmult.cpp  selene_scalarmult_vartime.cpp  selene_tobytes.cpp
selene/src/x64/: selene_add.cpp  selene_dbl.cpp  selene_frombytes.cpp  selene_madd.cpp  selene_map_to_curve.cpp  selene_msm_vartime.cpp  selene_scalarmult.cpp  selene_scalarmult_vartime.cpp
selene/src/x64/avx2/: selene_msm_vartime.cpp  selene_scalarmult.cpp  selene_scalarmult_vartime.cpp
selene/src/x64/ifma/: selene_msm_vartime.cpp  selene_scalarmult.cpp  selene_scalarmult_vartime.cpp
src/: api_divisor.cpp  api_point.cpp  api_polynomial.cpp  api_scalar.cpp  benchmark.cpp  benchmark_contest.cpp  benchmark_fcmpp.cpp  cpuid.cpp  dispatch.cpp  divisor.cpp  helioselene_secure_erase.cpp  poly.cpp  tests.cpp  tests_fuzz.cpp
src/portable/: fp_pow22523.cpp  fq_frombytes.cpp  fq_invert.cpp  fq_sqrt.cpp  helios_dbl.cpp  helios_frombytes.cpp  helios_msm_vartime.cpp  helios_scalarmult.cpp  helios_tobytes.cpp  selene_dbl.cpp  selene_msm_vartime.cpp  selene_scalarmult.cpp
src/x64/: fp_frombytes.cpp  fp_invert.cpp  fp_mul.cpp  fp_sq.cpp  (+30 more)
test_vectors/: helioselene_test_vectors.json
tools/: ecfft_params.sage  find_ecfft_curve.cpp  gen_ecfft_data.cpp  gen_test_vectors.cpp  json_to_header.py  test_vectors.sage  validate_test_vectors.py
(+81 files in other folders)
